Replace deprecated new URL() with URI.toURL() in MLClient